Ingress/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      containers: # Ingress NGINX Controller container
      - name: controller
        image: k8s.gcr.io/ingress-nginx/controller:v1.8.1 # Ingress NGINX Controller image
        args: # Command-line arguments for the controller
          - /nginx-ingress-controller
          - --configmap=$(POD_NAMESPACE)/nginx-configuration
        env: # Environment variables for the container
          - name: POD_NAME 
            valueFrom:
              fieldRef:
                fieldPath: metadata.name
          - name: POD_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
        ports: # Ports exposed by the container
          - name: http
            containerPort: 80
          - name: https
            containerPort: 443
