Ingress/watch-service.yml
apiVersion: v1
kind: Service
metadata:
  name: watch-service
spec:
  selector:
    app: watch
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
