Ingress/wear-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wear-service
spec:
  selector:
    app: wear
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
